# piupiu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  start.sh
.github/workflows/: cmake.yml
cmake/: CI.CTestScript.cmake  CTestCustom.cmake.in  CopyDllsForDebug.cmake  Coverage.cmake  LTO.cmake  PiupiuConfig.cmake.in  Warnings.cmake
docs/: RELATORIO.md  RELATORIO2.md  header.sty  metadata.yaml
include/: Packet.hpp
scripts/: launch.py
source/client/: CMakeLists.txt  client.cpp  client.hpp  confirmation-buffer.hpp  main.cpp  utils.hpp
source/client/console/: console.cpp  console.hpp  message.cpp  message.hpp  parser.cpp  parser.hpp
source/client/gui/: gui.cpp  gui.hpp
source/messaging/: Packet.cpp  Packet.hpp
source/server/: CMakeLists.txt  Notification.cpp  Notification.hpp  PendingNotification.hpp  Profile.cpp  Profile.hpp  ProfileManager.cpp  ProfileManager.hpp  ReplicaManager.cpp  ReplicaManager.hpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  Socket.cpp  Socket.hpp  main.cpp  server.cpp  server.hpp  start.sh
